--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+@import './application.tailwind.css';
+@import './componentes/index';
+
+body {
+  font-family: 'Manrope', sans-serif;
+}
