--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,14 +16,28 @@
           <i class="fa-solid fa-magnifying-glass bg-red-logo rounded-full p-2 mr-0 text-white"></i>
         </div>
       </div>
-      <div class="w-6/12 flex items-center justify-start min-[950px]:w-4/12">
+      <div class="w-6/12 flex items-center justify-start min-[950px]:w-4/12 relative">
         <%= link_to 'Airbnb your home', root_path, class:"rounded-full px-3 py-2 font-medium hover:bg-gray-100 ml-auto" %>
         <i class="fa-solid fa-earth-americas fa-lg mx-3 px-3 py-5 rounded-full hover:bg-gray-100"></i>
-        <div class="flex items-center px-3 py-2 border rounded-full hover:shadow-md relative">
+        <div class="flex items-center px-3 py-2 border rounded-full hover:shadow-md" data-action="click->header#toggleDropDownMenu">
           <i class="fa-solid fa-bars mr-2" style="color: #222222; padding: 1px 3px;"></i>
           <i class="fa-solid fa-user rounded-full fa-2x bg-gray-600 text-white" style="padding: 1px 3px"></i>
+        </div>
 
-          <div class="absolute top-14 right-0 z-10 mt-2 w-60 origin-top-right rounded-xl bg-white py-1 shadow-2xl ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+          <div
+            class="hidden absolute top-14 right-0 z-10 mt-2 w-60 origin-top-right rounded-xl bg-white py-1 shadow-2xl ring-1 ring-black ring-opacity-5 focus:outline-none"
+            role="menu"
+            aria-orientation="vertical"
+            aria-labelledby="user-menu-button"
+            tabindex="-1"
+            data-header-target="openUserMenu"
+            data-transition-enter="transition ease-out duration-100"
+            data-transition-enter-start="transform opacity-0 scale-95"
+            data-transition-enter-end="transform opacity-100 scale-100"
+            data-transition-leave="transition ease-in duration-75"
+            data-transition-leave-start="transform opacity-100 scale-100"
+            data-transition-leave-end="transform opacity-0 scale-95"
+          >
             <!-- Active: "bg-gray-100", Not Active: "" -->
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Sign up</a>
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Log in</a>
@@ -32,7 +46,6 @@
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Host an experience</a>
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Help</a>
           </div>
-        </div>
       </div>
     </div>
   </nav>
