--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -61,23 +61,29 @@
             <div class="absolute inset-0 flex items-center" aria-hidden="true">
               <div class="w-full border-t border-gray-300"></div>
             </div>
-            <%# <div class="relative flex justify-center">
-              <span class="px-2 bg-white text-sm text-gray-500">or</span>
-            </div> %>
           </div>
-
 
           <div class="pt-4">
             <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
-            <div class="border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
+            <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
               <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
               <input type="text" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
             </div>
           </div>
         </div>
-        <div class="mt-2">
-          <button data-action="click->modal#leave" type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-white">cancel</button>
+
+        <div class="mt-5">
+          <button data-action="click->modal#leave" type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 bg-red-logo text-white">Continue</button>
         </div>
+
+        <div class="relative mt-6 mb-4">
+            <div class="absolute inset-0 flex items-center" aria-hidden="true">
+              <div class="w-full border-t border-gray-300"></div>
+            </div>
+            <div class="relative flex justify-center">
+              <span class="px-2 bg-white text-sm text-gray-500">or</span>
+            </div>
+          </div>
       </div>
     </div>
   </div>
