Adds continue with fb button

--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -72,18 +72,23 @@
           </div>
         </div>
 
-        <div class="mt-5">
+        <div class="my-5">
           <button data-action="click->modal#leave" type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 bg-red-logo text-white">Continue</button>
         </div>
 
-        <div class="relative mt-6 mb-4">
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="w-full border-t border-gray-300"></div>
-            </div>
-            <div class="relative flex justify-center">
-              <span class="px-2 bg-white text-sm text-gray-500">or</span>
-            </div>
+        <div class="relative">
+          <div class="absolute inset-0 flex items-center" aria-hidden="true">
+            <div class="w-full border-t border-gray-300"></div>
           </div>
+          <div class="relative flex justify-center">
+            <span class="px-2 bg-white text-xs text-gray-500">or</span>
+          </div>
+        </div>
+        <%# buttons %>
+        <div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
+          <i class="fa-brands fa-facebook text-blue-600 fa-lg"></i>
+          <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
+        </div>
       </div>
     </div>
   </div>
