--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -55,7 +55,11 @@
       >
         <div data-action="click->modal#showModal" class="hidden" id="modal-trigger"></div>
         <div>
-          <h3 class="text-md leading-6 font-medium text-gray-900 text-center mb-4" id="modal-title" >Log in or sign up</h3>
+          <div class ="flex items-center mb-4">
+            <svg class="cursor-pointer" data-action="click->modal#leave" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
+            <h3 class="text-md leading-6 font-medium text-gray-900 text-center flex justify-center w-full" id="modal-title" >Log in or sign up</h3>
+
+          </div>
 
           <div class="relative">
             <div class="absolute inset-0 flex items-center" aria-hidden="true">
@@ -101,9 +105,7 @@
           <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
         </div>
 
-        <div class="absolute top-7 left-6 cursor-pointer" data-action="click->modal#leave">
-          <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
-        </div>
+
       </div>
     </div>
   </div>
