starts js controller to change to sign up or sign in forms

--- a/app/views/home/_user_auth_form.html.erb
+++ b/app/views/home/_user_auth_form.html.erb
@@ -1,50 +1,75 @@
-<div>
-  <div class ="flex items-center mb-4">
-    <svg class="cursor-pointer" data-action="click->modal#leave" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
-    <h3 class="text-md leading-6 font-medium text-gray-900 text-center flex justify-center w-full" id="modal-title" >Log in or sign up</h3>
+<div data-controller="user-auth">
+  <div data-user-auth-target="mailValidationForm"> <%#  contains the form to get email%>
+    <div>
+      <div class ="flex items-center mb-4">
+        <div class="p-2 rounded-full hover:bg-gray-200 cursor-pointer" data-user-auth-target="exitBtn" data-modal-target="exitBtn" data-action="click->modal#leave">
+          <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
+        </div>
 
-  </div>
+        <div class="p-2 rounded-full hover:bg-gray-200 hidden cursor-pointer" data-user-auth-target="backBtn" data-modal-target="backBtn">
+          <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
+        </div>
 
-  <div class="relative">
-    <div class="absolute inset-0 flex items-center" aria-hidden="true">
-      <div class="w-full border-t border-gray-300"></div>
+
+        <h3 class="text-md leading-6 font-medium text-gray-900 text-center flex justify-center w-full pr-2" data-user-auth-target="panelTitle" data-modal-target="panelTitle" id="modal-title">Log in or sign up</h3>
+
+      </div>
+
+      <div class="relative">
+        <div class="absolute inset-0 flex items-center" aria-hidden="true">
+          <div class="w-full border-t border-gray-300"></div>
+        </div>
+      </div>
+
+      <div class="pt-4">
+        <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
+        <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
+          <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
+          <input type="text" data-modal-target="emailInput" data-user-auth-target="emailInput" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
+        </div>
+        <div class="text-red-500 text-xs mt-2 hidden" data-user-auth-target="emailAlert" data-modal-target="emailAlert">
+          <div class="flex items-center">
+            <span class="mr-2">
+              <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Error" role="img" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"></path></svg>
+            </span>
+            Email is required.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="my-5">
+      <button
+        type="button"
+        class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 airbnb-gradient text-white"
+        data-action='click->user-auth#submitForm'
+      >
+        Continue</button>
+    </div>
+
+    <div class="relative">
+      <div class="absolute inset-0 flex items-center" aria-hidden="true">
+        <div class="w-full border-t border-gray-300"></div>
+      </div>
+      <div class="relative flex justify-center">
+        <span class="px-2 bg-white text-xs text-gray-500">or</span>
+      </div>
+    </div>
+    <%# buttons %>
+    <div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
+      <%# <i class="fa-brands fa-facebook text-blue-600 fa-lg"></i> %>
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;"><defs><path id="a" d="M.001 0H24v23.854H.001z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"></use></mask><path d="M24 12c0-6.627-5.373-12-12-12S0 5.373 0 12c0 5.99 4.388 10.954 10.125 11.854V15.47H7.078V12h3.047V9.356c0-3.007 1.792-4.668 4.533-4.668 1.312 0 2.686.234 2.686.234v2.953H15.83c-1.491 0-1.956.925-1.956 1.874V12h3.328l-.532 3.469h-2.796v8.385C19.612 22.954 24 17.99 24 12" fill="#1877F2" mask="url(#b)"></path><path d="M16.671 15.469L17.203 12h-3.328V9.749c0-.949.465-1.874 1.956-1.874h1.513V4.922s-1.374-.234-2.686-.234c-2.741 0-4.533 1.66-4.533 4.668V12H7.078v3.469h3.047v8.385a12.09 12.09 0 003.75 0V15.47h2.796" fill="#FFF"></path></g></svg>
+      <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
+    </div>
+
+    <div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
+      <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block;"><g fill="none" fill-rule="evenodd"><path d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z" fill="#EA4335"></path><path d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z" fill="#4285F4"></path><path d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z" fill="#FBBC05"></path><path d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z" fill="#34A853"></path><path d="M0 0h18v18H0V0z"></path></g></svg>
+      <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
+    </div>
+
+    <div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;"><path d="m13.3 2.1a5.1 5.1 0 0 1 3.8-2.1 5.1 5.1 0 0 1 -1.2 3.8 4.1 4.1 0 0 1 -3.6 1.7 4.5 4.5 0 0 1 1-3.4zm-5 3.7c-2.8 0-5.8 2.5-5.8 7.3 0 4.9 3.5 10.9 6.3 10.9 1 0 2.5-1 4-1s2.6.9 4 .9c3.1 0 5.3-6.4 5.3-6.4a5.3 5.3 0 0 1 -3.2-4.9 5.2 5.2 0 0 1 2.6-4.5 5.4 5.4 0 0 0 -4.7-2.4c-2 0-3.5 1.1-4.3 1.1-.9 0-2.4-1-4.2-1z"></path></svg>
+      <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
     </div>
   </div>
-
-  <div class="pt-4">
-    <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
-    <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
-      <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
-      <input type="text" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
-    </div>
-  </div>
-</div>
-
-<div class="my-5">
-  <button type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 airbnb-gradient text-white" >Continue</button>
-</div>
-
-<div class="relative">
-  <div class="absolute inset-0 flex items-center" aria-hidden="true">
-    <div class="w-full border-t border-gray-300"></div>
-  </div>
-  <div class="relative flex justify-center">
-    <span class="px-2 bg-white text-xs text-gray-500">or</span>
-  </div>
-</div>
-<%# buttons %>
-<div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
-  <%# <i class="fa-brands fa-facebook text-blue-600 fa-lg"></i> %>
-  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;"><defs><path id="a" d="M.001 0H24v23.854H.001z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"></use></mask><path d="M24 12c0-6.627-5.373-12-12-12S0 5.373 0 12c0 5.99 4.388 10.954 10.125 11.854V15.47H7.078V12h3.047V9.356c0-3.007 1.792-4.668 4.533-4.668 1.312 0 2.686.234 2.686.234v2.953H15.83c-1.491 0-1.956.925-1.956 1.874V12h3.328l-.532 3.469h-2.796v8.385C19.612 22.954 24 17.99 24 12" fill="#1877F2" mask="url(#b)"></path><path d="M16.671 15.469L17.203 12h-3.328V9.749c0-.949.465-1.874 1.956-1.874h1.513V4.922s-1.374-.234-2.686-.234c-2.741 0-4.533 1.66-4.533 4.668V12H7.078v3.469h3.047v8.385a12.09 12.09 0 003.75 0V15.47h2.796" fill="#FFF"></path></g></svg>
-  <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
-</div>
-
-<div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
-  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block;"><g fill="none" fill-rule="evenodd"><path d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z" fill="#EA4335"></path><path d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z" fill="#4285F4"></path><path d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z" fill="#FBBC05"></path><path d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z" fill="#34A853"></path><path d="M0 0h18v18H0V0z"></path></g></svg>
-  <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
-</div>
-
-<div class=" mt-5 w-full px-4 py-3 flex items-center border border-black rounded-md hover:bg-gray-100 cursor-pointer">
-  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;"><path d="m13.3 2.1a5.1 5.1 0 0 1 3.8-2.1 5.1 5.1 0 0 1 -1.2 3.8 4.1 4.1 0 0 1 -3.6 1.7 4.5 4.5 0 0 1 1-3.4zm-5 3.7c-2.8 0-5.8 2.5-5.8 7.3 0 4.9 3.5 10.9 6.3 10.9 1 0 2.5-1 4-1s2.6.9 4 .9c3.1 0 5.3-6.4 5.3-6.4a5.3 5.3 0 0 1 -3.2-4.9 5.2 5.2 0 0 1 2.6-4.5 5.4 5.4 0 0 0 -4.7-2.4c-2 0-3.5 1.1-4.3 1.1-.9 0-2.4-1-4.2-1z"></path></svg>
-  <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
 </div>
