adds a min-height to the modal panel, adds sign out link to dropdown menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,11 @@
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Host an experience</a>
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Help</a>
             </div>
+            <% if user_signed_in? %>
+              <div class="py-1" role="none">
+                <%= link_to "Log out", destroy_user_session_path, class:"block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", data:{turbo_method: :delete, turbo_confirm: 'are you sure?'}%>
+              </div>
+            <% end %>
           </div>
       </div>
     </div>
