--- a/app/views/home/_user_auth_form.html.erb
+++ b/app/views/home/_user_auth_form.html.erb
@@ -1,38 +1,38 @@
 <div data-controller="user-auth">
-  <div data-user-auth-target="mailValidationForm"> <%#  contains the form to get email%>
+  <div class ="flex items-center mb-4">
+    <div class="p-2 rounded-full hover:bg-gray-200 cursor-pointer" data-user-auth-target="exitBtn" data-modal-target="exitBtn" data-action="click->modal#leave">
+      <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
+    </div>
+
+    <div class="p-2 rounded-full hover:bg-gray-200 hidden cursor-pointer" data-user-auth-target="backBtn" data-modal-target="backBtn" data-action="click->user-auth#resetForm">
+      <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
+    </div>
+
+    <h3 class="text-md leading-6 font-medium text-gray-900 text-center flex justify-center w-full pr-2" data-user-auth-target="panelTitle" data-modal-target="panelTitle" id="modal-title">Log in or sign up</h3>
+
+  </div>
+  <div class="relative">
+    <div class="absolute inset-0 flex items-center" aria-hidden="true">
+      <div class="w-full border-t border-gray-300"></div>
+    </div>
+  </div>
+  <%#  contains the form to get email%>
+  <div data-user-auth-target="mailValidationForm" class="">
     <div>
-      <div class ="flex items-center mb-4">
-        <div class="p-2 rounded-full hover:bg-gray-200 cursor-pointer" data-user-auth-target="exitBtn" data-modal-target="exitBtn" data-action="click->modal#leave">
-          <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
-        </div>
-
-        <div class="p-2 rounded-full hover:bg-gray-200 hidden cursor-pointer" data-user-auth-target="backBtn" data-modal-target="backBtn">
-          <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
-        </div>
-
-
-        <h3 class="text-md leading-6 font-medium text-gray-900 text-center flex justify-center w-full pr-2" data-user-auth-target="panelTitle" data-modal-target="panelTitle" id="modal-title">Log in or sign up</h3>
-
-      </div>
-
-      <div class="relative">
-        <div class="absolute inset-0 flex items-center" aria-hidden="true">
-          <div class="w-full border-t border-gray-300"></div>
-        </div>
-      </div>
-
       <div class="pt-4">
         <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
         <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
           <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
           <input type="text" data-modal-target="emailInput" data-user-auth-target="emailInput" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
         </div>
-        <div class="text-red-500 text-xs mt-2 hidden" data-user-auth-target="emailAlert" data-modal-target="emailAlert">
+        <div class="text-red-500 text-sm mt-2 hidden" data-user-auth-target="emailAlert" data-modal-target="emailAlert">
           <div class="flex items-center">
             <span class="mr-2">
               <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Error" role="img" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"></path></svg>
             </span>
-            Email is required.
+            <small data-user-auth-target="emailAlertText">
+            </small>
+
           </div>
         </div>
       </div>
@@ -72,4 +72,22 @@
       <div class="flex justify-center w-full text-sm font-semibold">Continue with Facebook</div>
     </div>
   </div>
+
+  <%# Sign in form %>
+  <%=form_for(resource, as: resource_name, url: session_path(resource_name), html:{class:'hidden', data:{user_auth_target:"signInForm"}}) do |f| %>
+    <%= f.hidden_field :email, autofocus: true, autocomplete: "email", data:{user_auth_target:'emailField'} %>
+
+    <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
+      <%= f.label :password, class:"block text-xs font-medium text-gray-900"%>
+      <%= f.password_field :password, autocomplete: "current-password", class:"block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm", placeholder:'Password' %>
+    </div>
+
+    <div class="actions my-5">
+      <%= f.submit "Log in", class:'inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 airbnb-gradient text-white' %>
+    </div>
+
+    <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+      <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+    <% end %>
+  <% end %>
 </div>
