--- a/app/views/home/_user_auth_form.html.erb
+++ b/app/views/home/_user_auth_form.html.erb
@@ -4,7 +4,7 @@
       <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><path d="m6 6 20 20"></path><path d="m26 6-20 20"></path></svg>
     </div>
 
-    <div class="p-2 rounded-full hover:bg-gray-200 hidden cursor-pointer" data-user-auth-target="backBtn" data-modal-target="backBtn" data-action="click->user-auth#resetForm">
+    <div class="p-2 rounded-full hover:bg-gray-200 hidden cursor-pointer" data-user-auth-target="backBtn" data-modal-target="backBtn" data-action="click->user-auth#resetForm" data-modal-target="backBtn">
       <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
     </div>
 
@@ -30,11 +30,11 @@
     <div>
       <div class="pt-4">
         <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
-        <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
+        <div class="mt-6 border rounded-md px-3 py-2 shadow-sm focus-within:ring-1 input-default">
           <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
           <input type="text" data-modal-target="emailInput" data-user-auth-target="emailInput" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
         </div>
-        <div class="text-red-500 text-sm mt-2 hidden" data-user-auth-target="emailAlert" data-modal-target="emailAlert">
+        <div class="text-red-500 text-sm mt-2 hidden" data-user-auth-target="emailAlert">
           <div class="flex items-center">
             <span class="mr-2">
               <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Error" role="img" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"></path></svg>
