--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,8 +14,12 @@
 
 .input-invalid {
   @apply focus-within:border-rose-500 focus-within:ring-rose-500 border-rose-500
-}
+};
 
 .input-default {
 @apply focus-within:border-gray-900 focus-within:ring-gray-900 border-gray-300
-}
+};
+
+.btn-submit {
+  @apply inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-3 text-white
+};
