--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-<p><%= t('.hello') %></p>
+<div class="flex">
+  <% @properties.each do |property| %>
+    <div class="border">
+      <p><%= property.name %></p>
+      <p><%= property.headline %></p>
+      <p><%= property.description %></p>
+      <p><%= property.street_1 %></p>
+      <p><%= property.city %></p>
+      <p><%= property.state %></p>
+      <p><%= property.country %></p>
+    </div>
+<% end %>
+</div>
