--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,19 @@
-<div class="flex">
-  <% @properties.each do |property| %>
-    <div class="border">
-      <p><%= property.name %></p>
-      <p><%= property.headline %></p>
-      <p><%= property.description %></p>
-      <p><%= property.street_1 %></p>
-      <p><%= property.city %></p>
-      <p><%= property.state %></p>
-      <p><%= property.country %></p>
-    </div>
-<% end %>
+<div class="container mx-auto">
+  <div role="list" class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 md:grid-cols-4 2xl:grid-cols-5 xl:gap-x-8 py-16">
+    <% @properties.each do |property| %>
+      <div class= "relative">
+        <div class="block w-full aspect-w-10 aspect-h-7 rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 hover:opacity-80">
+          <img src="https://images.unsplash.com/photo-1503785640985-f62e3aeee448?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=874&q=80" alt="trees" class="rounded-xl">
+        </div>
+        <div class="content">
+          <div class="flex justify-between mt-2 block text-sm font-medium truncate text-gray-900 pointer-events-none">
+            <span><%= property.city %>, <%= property.country %></span> <span>star score</span>
+          </div>
+          <p class="block text-sm font-medium text-gray-500 pointer-events-none mt-1">7,994 km away</p>
+          <p class="block text-sm font-medium text-gray-500 pointer-events-none mt-1">jun 19 -jun 24</p>
+          <p class="block text-sm font-medium text-gray-900 pointer-events-none mt-2">$ 170 per night</p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
