--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,8 @@
-<div class="container mx-auto">
+<div
+  class="container mx-auto"
+  data-controller="geolocation"
+  data-user-coords=""
+>
   <div role="list" class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 md:grid-cols-4 2xl:grid-cols-5 xl:gap-x-8 py-16">
     <% @properties.each do |property| %>
       <div class= "relative">
