--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div
   class="container mx-auto"
   data-controller="geolocation"
-  data-user-coords=""
+  data-user-coords="<%= current_user.coords.to_json if user_signed_in? && current_user.profile.latitude.present? && current_user.profile.longitude.present?%>"
 >
   <div role="list" class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 md:grid-cols-4 2xl:grid-cols-5 xl:gap-x-8 py-16">
     <% @properties.each do |property| %>
