--- a/app/views/home/_user_auth_form.html.erb
+++ b/app/views/home/_user_auth_form.html.erb
@@ -32,7 +32,7 @@
         <h4 class="text-2xl leading-6 text-gray-900 font-medium">Welcome to Airbnb</h4>
         <div class="mt-6 border rounded-md px-3 py-2 shadow-sm focus-within:ring-1 input-default">
           <label for="email" class="block text-xs font-medium text-gray-900">Email</label>
-          <input type="text" data-modal-target="emailInput" data-user-auth-target="emailInput" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com">
+          <input type="text" data-modal-target="emailInput" data-user-auth-target="emailInput" named="email" id="email" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="yourmail@mail.com" data-action="keyup->user-auth#submitFormWithEnter">
         </div>
         <div class="text-red-500 text-sm mt-2 hidden" data-user-auth-target="emailAlert">
           <div class="flex items-center">
@@ -100,7 +100,7 @@
 
     <div class="mt-6 border border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-gray-900 focus-within:border-gray-900">
       <%= f.label :password, class:"block text-xs font-medium text-gray-900"%>
-      <%= f.password_field :password, autocomplete: "current-password", class:"block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm", placeholder:'Password' %>
+      <%= f.password_field :password, autocomplete: "current-password", class:"block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm", placeholder:'Password', data:{user_auth_target:  'passwordField'}  %>
     </div>
 
     <div class="actions my-5">
@@ -140,7 +140,7 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %>
-      <%= f.password_field :password, autocomplete: "new-password", class:"block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm", placeholder:'Password' %>
+      <%= f.password_field :password, autocomplete: "new-password", class:"block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm", placeholder:'Password', data:{user_auth_target:  'passwordField'} %>
     </div>
 
     <div class="actions my-5">
