edit money initializer to remove deprecation messages, display property price on index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
           </div>
           <p data-distance-away class="block text-sm font-medium text-gray-500 pointer-events-none mt-1"></p>
           <p class="block text-sm font-medium text-gray-500 pointer-events-none mt-1">jun 19 -jun 24</p>
-          <p class="block text-sm font-medium text-gray-900 pointer-events-none mt-2">$ 170 per night</p>
+          <p class="block text-sm font-medium text-gray-900 pointer-events-none mt-2"><%= humanized_money_with_symbol property.price %> per night</p>
         </div>
       </div>
     <% end %>
