--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,12 @@
         </div>
         <div class="content">
           <div class="flex justify-between mt-2 text-sm font-medium truncate text-gray-900 pointer-events-none">
-            <span><%= property.city %>, <%= property.country %></span> <span class="flex items-center"><svg class="mr-2 " viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;"><path d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z" fill-rule="evenodd"></path></svg><%= property.average_rating %></span>
+            <span><%= property.city %>, <%= property.country %></span>
+            <span class="flex items-center">
+              <svg class="mr-2 " viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;">
+                <path d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z" fill-rule="evenodd"></path>
+              </svg>
+              <%= property.average_rating %></span>
           </div>
           <p data-distance-away class="block text-sm font-medium text-gray-500 pointer-events-none mt-1"></p>
           <p class="block text-sm font-medium text-gray-500 pointer-events-none mt-1">jun 19 -jun 24</p>
