--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,14 @@
         data-property-coords='{"latitude": <%= property.latitude %>, "longitude": <%= property.longitude %>}'
         data-geolocation-target ='property'
       >
-        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 overflow-hidden">
-          <%= image_tag property.default_image, class:"object-cover pointer-events-none group-hover:opacity-75" %>
+        <div class="group block w-full aspect-w-10 aspect-h-10 rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 overflow-hidden">
+          <%= image_tag property.default_image, class:"object-cover cursor-pointer" %>
+          <div class="flex flex-row-reverse p-2">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7 cursor-pointer">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+            </svg>
+          </div>
+
         </div>
         <div class="content">
           <div class="flex justify-between mt-2 text-sm font-medium truncate text-gray-900 pointer-events-none">
@@ -20,7 +26,7 @@
               <svg class="mr-2 " viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;">
                 <path d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z" fill-rule="evenodd"></path>
               </svg>
-              <%= property.average_rating %></span>
+              <%= property.average_rating.round(2) %></span>
           </div>
           <p data-distance-away class="block text-sm font-medium text-gray-500 pointer-events-none mt-1"></p>
           <p class="block text-sm font-medium text-gray-500 pointer-events-none mt-1">jun 19 -jun 24</p>
